ingress/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld-pod
  ports:
    - targetPort: 3000
      port: 3000
      protocol: TCP
