ingress/helloworld-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: default
spec:
  rules:
    - host: helloworld.example.com
      http:
        paths:
          - backend:
              serviceName: helloworld-service
              servicePort: 3000
